# 128-bit-ops

./: CMakeLists.txt  generate_data.ipynb
cmake/: FindAkrypt.cmake
cmake/ntc/: ntc-dev-build.cmake
src/: benchmark.cpp  tests.cpp
